# nueeeee

./: CMakeLists.txt
env/: uboonecode-v06_26_01_18.sh  uboonecode-v06_26_01_19.sh
fcl/g4/: standard_g4_sbn_icarus.fcl
sbnanalysis/: setup.sh  setup_build.sh
sbnanalysis/ana/: CMakeLists.txt
sbnanalysis/ana/ExampleAnalysis/: CMakeLists.txt  ExampleSelection.cxx  ExampleSelection.h
sbnanalysis/ana/NuE_Pandora_Vtxing/: CMakeLists.txt  Pandora_Vtxing.json  Pandora_VtxingSelection.cxx  Pandora_VtxingSelection.h  Pandora_VtxingTools.cxx  Pandora_VtxingTools.h  SpaceChargeMicroBooNE.C  SpaceChargeMicroBooNE.h  goodfile_fullpath.list  numi_prelim.list
sbnanalysis/ana/SBNOsc/: Covariance.h  sbn-cov.cxx
sbnanalysis/ana/SBNProposal/: SBNProposalSelection.cxx
sbnanalysis/core/: CMakeLists.txt  ProcessorBase.cxx  ProcessorBase.hh
sbnanalysis/useful_scripts/: filelist.sh  xspl.sh
